完整的项目

--- a/src/stylus/color.styl
+++ b/src/stylus/color.styl
@@ -1,1 +1,8 @@
+$backc=#f3f3f3;
 $primery=#00a2ed;
+$white=white;
+$timetitle=#6b6b6b;
+$fontcolor=#111111;
+$pinglunname=#000000;
+$pingluncon=#3a3a3a;
+$pingluntime=#c3c3c3;
